@@ -7,7 +7,7 @@
 			<centerleft>50%</centerleft>
 			<width>700</width>
 			<centertop>50%</centertop>
-			<height>780</height>
+			<height>860</height>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="700" />
 				<param name="height" value="80" />
@@ -37,6 +37,20 @@
 						<label>$LOCALIZE[40083]</label>
 						<onclick>Skin.ToggleSetting(enable_visualisation)</onclick>
 						<selected>Skin.HasSetting(enable_visualisation)</selected>
+					</control>
+					<control type="radiobutton" id="50011">
+						<width>700</width>
+						<label>$LOCALIZE[40095]</label>
+						<include>DialogSettingButton</include>
+						<selected>!Skin.HasSetting(show_disc)</selected>
+						<onclick>Skin.ToggleSetting(show_disc)</onclick>
+					</control>
+					<control type="radiobutton" id="50012">
+						<width>700</width>
+						<label>$LOCALIZE[40088]</label>
+						<include>DialogSettingButton</include>
+						<selected>Skin.HasSetting(hide_cdcase)</selected>
+						<onclick>Skin.ToggleSetting(hide_cdcase)</onclick>
 					</control>
 					<control type="button" id="5004">
 						<width>700</width>
