@@ -102,7 +102,6 @@
 							<height>110</height>
 							<aspectratio aligny="center">stretch</aspectratio>
 							<texture background="true" colordiffuse="BFFFFFFF">colors/black.png</texture>
-							<visible>!ListItem.IsCollection</visible>
 							<visible>Skin.HasSetting(greyedout_watched) + Integer.IsGreater(ListItem.Playcount,0)</visible>
 						</control>
 						<control type="textbox">
